[build-system]
requires = [
    "scikit-build-core >=0.4.3",
    "nanobind",
    "cmake >=3.18",
    "ninja",
]
build-backend = "scikit_build_core.build"

[project]
name = "ompl"
dynamic = ["version"]
requires-python = ">=3.9"

[project.scripts]
ompl_benchmark_statistics = "ompl.ompl_benchmark_statistics:main"

[project.optional-dependencies]
examples = [
    "viser",
    "coal",
    "pin"
]
dev = [
    "pytest",
]

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "../CMakeLists.txt"
metadata.version.regex = '''(?i)project\s*\(\s*\w+\s+VERSION\s+(?P<value>[\d.]+)'''

[tool.scikit-build.cmake]
source-dir = ".." 
args = [
    "-DOMPL_BUILD_PYTHON_BINDINGS=ON",
    "-DOMPL_REGISTRATION=OFF",
    "-DOMPL_BUILD_DEMOS=OFF",
    "-DOMPL_BUILD_TESTS=OFF",
]
